=== HEAD

* Add :materialized option to Database#views on PostgreSQL to return materialized views (Blargel) (#1348)

* Make defaults_setter plugin inherit custom default values when subclassing (jeremyevans)

=== 4.46.0 (2017-05-01)

* Recognize additional disconnect error on MySQL (jeremyevans)

* Deconstantize dataset SQL generation, speeding up ruby 2.3+, slowing down earlier versions (jeremyevans)

* Deprecate calling Dataset#set_graph_aliases before Dataset#graph (jeremyevans)

* Don't swallow exception if there is an exception when rolling back a transaction when using :rollback=>:always option (jeremyevans)

* Deprecate passing 2 arguments to Database#alter_table (jeremyevans)

* Deprecate passing Schema::CreateTableGenerator instance as second argument to Database#create_table (jeremyevans)

* Deprecate Database::DatasetClass as a way for getting default dataset classes for datasets (jeremyevans)

* Deprecate SQLite pragma getting and setting methods (jeremyevans)

* Remove handling of EMULATED_FUNCTION_MAP from adapter dataset classes, overide Dataset#native_function_name instead (jeremyevans)

* Deprecate {Integer,Timestamp}Migrator::DEFAULT_SCHEMA_{COLUMN,TABLE} (jeremyevans)

* Deprecate Database#jdbc_* methods for jdbc/db2 adapter Database instances (jeremyevans)

* Remove addition of Database#jdbc_* to JDBC::Database in jdbc/db2 adapter (jeremyevans)

* Deprecate many internal Database and Dataset string/regexp constants in core and included adapters (jeremyevans)

* Remove use of Fixnum in sqlanywhere shared adapter (jeremyevans)

* Deprecate Sequel::Schema::Generator constant, use Sequel::Schema::CreateTableGenerator instead (jeremyevans)

* Deprecate Database#log_yield (jeremyevans)

* Deprecate the set_overrides extension (jeremyevans)

* If passing an empty array or hash and a block to a filtering method, ignore the array or hash and just use the block (jeremyevans)
